--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -1,20 +1,22 @@
 <div>
-    <div class="adsBanner" style="height: 30%;">
-
+    <div class="adsBanner">
+            AdsBanner...
     </div>
-
+    <div>Search box...</div>
     <div class="services">
-        <div class="cellRow">
-            <div class="cell" v-for="service in servieList">
-                <img :src="service.ServiceImage" height="100" width="200" @click="showMoreInfo(service)">
-                <div class="form-group serviceName">
-                    {{service.ServiceName}} - ₹ {{service.Price}}
-                </div>
-                <div class="form-group purchaseButton" style="padding: 5px;" @click="chooseOption(service, '1')">
-                    <span class="">Subscribe @ ₹ {{service.SubscriptionPrice}}</span>
-                </div>
-                <div class="form-group purchaseButton" style="padding: 5px;" @click="chooseOption(service, '2')">
-                    <span class="">Purchase Once</span>
+        <div class="row serviceCards">
+            <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 mb-4" v-for="service in servieList">
+                <div class="sercard">
+                    <img :src="service.ServiceImage" class="serviceCardImg" @click="showMoreInfo(service)">
+                    <div class="serviceName">
+                        <h5 class="mt-3">{{service.ServiceName}} - ₹ {{service.Price}}</h5>
+                    </div>
+                    <div class="form-group purchaseButton" style="padding: 5px;" @click="chooseOption(service, '1')">
+                        <span class="">Subscribe @ ₹ {{service.SubscriptionPrice}}</span>
+                    </div>
+                    <div class="form-group purchaseButton" style="padding: 5px;" @click="chooseOption(service, '2')">
+                        <span class="">Purchase Once</span>
+                    </div>
                 </div>
             </div>
         </div>
