--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -146,6 +146,10 @@
                                 </div>
                             </div>
                             <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Vehicle Name"
+                                    v-model="newVehicleDetails.VehicleName">
+                            </div>
+                            <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Vehicle No"
                                     v-model="newVehicleDetails.VehicleNumber">
                             </div>
