--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -33,6 +33,9 @@
                 <li @click="redirectToMyAccount">
                     My Account
                 </li>
+                <li @click="redirectToMyOrders">
+                    My Orders
+                </li>
                 <li @click="redirectToMyProducts">
                     My Products
                 </li>
