--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -24,9 +24,9 @@
 
     <div class="cellRow">
         <div class="cell" v-for="product in myServiceProducts" v-if="vehicleInfo.isPersonal">
-        <label class="radioLabel">
-            <input type="radio" name="Vechile" :value="product.VehicleId" @click="chooseVehicle(product, $event)">
-        </label>
+            <label class="radioLabel">
+                <input type="radio" name="Vechile" :value="product.VehicleId" @click="chooseVehicle(product, $event)">
+            </label>
             <img :src="product.ServiceImage" height="100" width="200" @click="showMoreInfo(service)">
             <div class="form-group serviceName">
                 {{product.VehicleNumber}}
@@ -40,6 +40,33 @@
         </div>
     </div>
 
+    <div class="form-group" v-if="serviceType == 2">
+        <label>
+            Date
+        </label>
+        <datePickerComponent :keyString="'StartDate'" v-model="vehicleInfo.ServiceDate" :value="vehicleInfo.ServiceDate"
+            :format="'Do MMM YYYY'" :onUpdate="updateServiceDate" :pickerType="'date'">
+        </datePickerComponent>
+
+    </div>
+
+    <div class="form-group" v-if="serviceType == 2">
+        <label>
+            Time Slot
+        </label>
+        <select v-model="vehicleInfo.TimeSlot" class="form-control">
+            <option value="1">6:00 AM - 8:00 AM</option>
+            <option value="2">8:00 AM - 10:00 AM</option>
+            <option value="3">10:00 AM - 12:00 PM</option>
+            <option value="4">12:00 PM - 2:00 PM</option>
+            <option value="5">2:00 PM - 4:00 PM</option>
+            <option value="6">4:00 PM - 6:00 PM</option>
+            <option value="7">6:00 PM - 8:00 PM</option>
+            <option value="8">8:00 PM - 10:00 PM</option>
+        </select>
+
+    </div>
+
     <div class="" v-if="serviceType == 1">
         <div class="form-group">
             <label>
@@ -48,16 +75,56 @@
 
         </div>
         <div class="cellRow">
-            <div class="cell" v-for="product in subscriptionTypes">
-            <label class="radioLabel">
-                <input type="radio" name="serviceFrequency" :value="product.SubsribeId" v-model="vehicleInfo.Frequency">
-                <span class="form-group serviceName">
+            <div class="cell" v-for="product in subscriptionTypes" style="flex: 0 0 12%;">
+                <label class="radioLabel customradioLabel">
+                    <input type="radio" name="serviceFrequency" :value="product.SubsribeId"
+                        v-model="vehicleInfo.Frequency">
+                    <span class="form-group serviceName">
                         {{product.SubscribeType}}
-                </span>
-            </label>
+                    </span>
+                </label>
 
             </div>
         </div>
+        <div class="form-group" v-if="vehicleInfo.Frequency == 2">
+            <label>Day</label>
+            <input type="radio" value="0" name="weeklyDay" v-model="vehicleInfo.WeeklyDay">Sunday
+            <input type="radio" value="1" name="weeklyDay" v-model="vehicleInfo.WeeklyDay">Monday
+            <input type="radio" value="2" name="weeklyDay" v-model="vehicleInfo.WeeklyDay">Tuesday
+            <input type="radio" value="3" name="weeklyDay" v-model="vehicleInfo.WeeklyDay">Wednesday
+            <input type="radio" value="4" name="weeklyDay" v-model="vehicleInfo.WeeklyDay">Thursday
+            <input type="radio" value="5" name="weeklyDay" v-model="vehicleInfo.WeeklyDay">Friday
+            <input type="radio" value="6" name="weeklyDay" v-model="vehicleInfo.WeeklyDay">Saturday
+        </div>
+
+        <div class="form-group">
+            <label>
+                Date
+            </label>
+            <datePickerComponent :keyString="'StartDate'" v-model="vehicleInfo.ServiceDate"
+                :value="vehicleInfo.ServiceDate" :format="'Do MMM YYYY'" :onUpdate="updateServiceDate"
+                :pickerType="'date'">
+            </datePickerComponent>
+
+        </div>
+
+        <div class="form-group">
+            <label>
+                Time Slot
+            </label>
+            <select v-model="vehicleInfo.TimeSlot" class="form-control">
+                <option value="1">6:00 AM - 8:00 AM</option>
+                <option value="2">8:00 AM - 10:00 AM</option>
+                <option value="3">10:00 AM - 12:00 PM</option>
+                <option value="4">12:00 PM - 2:00 PM</option>
+                <option value="5">2:00 PM - 4:00 PM</option>
+                <option value="6">4:00 PM - 6:00 PM</option>
+                <option value="7">6:00 PM - 8:00 PM</option>
+                <option value="8">8:00 PM - 10:00 PM</option>
+            </select>
+
+        </div>
+
         <div class="form-group">
             <label>
                 Promo Code
@@ -67,27 +134,7 @@
         </div>
 
     </div>
-    <div class="form-group">
-        <label>
-            Time Slot
-        </label>
-        <select v-model="vehicleInfo.TimeSlot" class="form-control">
-            <option value="8:00">8:00 AM</option>
-            <option value="9:00">9:00 AM</option>
-            <option selected value="10:00">10:00 AM</option>
-            <option value="11:00">11:00 AM</option>
-            <option value="12:00">12:00 PM</option>
-            <option value="13:00">1:00 PM</option>
-            <option value="14:00">2:00 PM</option>
-            <option value="15:00">3:00 PM</option>
-            <option value="16:00">4:00 PM</option>
-            <option value="17:00">5:00 PM</option>
-            <option value="18:00">6:00 PM </option>
-            <option value="19:00">7:00 PM</option>
-            <option value="20:00">8:00 PM</option>
-        </select>
 
-    </div>
     <div class="address">
         <div>
             <h5>Delivery/Service Address</h5>
