--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -48,6 +48,9 @@
                 <li>
                     Support
                 </li>
+                <li @click="userLogout">
+                    Logout
+                </li>
             </ul>
         </div>
     </div>
