--- a/WebClient/src/assets/css/login.css
+++ b/WebClient/src/assets/css/login.css
@@ -31,9 +31,10 @@ body{
 	font-weight: 100;
 }
 .loginBoxDiv form{
-    margin: 20px;
-    padding: 30px;
+    /* margin: 20px; */
+    padding: 10px;
     background: #fff;
+    min-height: 60%;
 }
 .loginBoxDiv form h4{
     padding-left: 16px;
@@ -56,7 +57,7 @@ body{
     margin: 20px 0 0 0 !important;
 }
 .loginBoxDiv form input[type="submit"],  input[type="button"]{
-    width: 100%;
+    width: 50%;
     border: none;
     outline: none;
     padding: 10px;
@@ -106,6 +107,7 @@ body{
 }
 .brandLogo{
     text-align: center;
+    height: 10vh;
 }
 /* @media only screen and (max-width: 600px) {
     .authfyLogin .footer{
@@ -113,3 +115,121 @@ body{
         height: 25vh;
     }
 } */
+.loginScreen, .registerScreen{
+    /* height: 65vh; */
+}
+.innerForm{
+    height: 100%;
+    width: 100%;
+    background: white;
+}
+.adsBanner{
+    height: 25vh;
+    background: #b8ccd6;
+}
+
+.loginScreen button{
+    text-align: center;
+}
+
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+  opacity: 1 !important;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+
+.mySlides img{
+    height: 30vh;
+}
