--- a/WebClient/src/components/homeModule/headerComponent/headerComponent.template.html
+++ b/WebClient/src/components/homeModule/headerComponent/headerComponent.template.html
@@ -161,7 +161,7 @@
             </li>
         </ul>-->
             <div class="">
-                <userProfilePanel></userProfilePanel>
+                <userProfilePanel :panelCallback="panelCallback"></userProfilePanel>
             </div>
 
 
