--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -1,53 +1,91 @@
-<div>
-    <div class="adsBanner">
-            AdsBanner...
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <div class="adsBanner slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <!-- <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="dist/img/img1.jpeg" style="width:100%">
+                <div class="text">Caption Text</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="dist/img/img2.jpeg" style="width:100%">
+                <div class="text">Caption Two</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="dist/img/img3.jpeg" style="width:100%">
+                <div class="text">Caption Three</div>
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
+        </div>
     </div>
-    <div>Search box...</div>
-    <div class="services">
-        <div class="row serviceCards">
-            <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 mb-4" v-for="service in servieList">
-                <div class="sercard">
-                    <img :src="service.ServiceImage" class="serviceCardImg" @click="showMoreInfo(service)">
-                    <div class="serviceName">
-                        <h5 class="mt-3">{{service.ServiceName}} - ₹ {{service.Price}}</h5>
-                    </div>
-                    <div class="form-group purchaseButton" style="padding: 5px;" @click="chooseOption(service, '1')">
-                        <span class="">Subscribe @ ₹ {{service.SubscriptionPrice}}</span>
-                    </div>
-                    <div class="form-group purchaseButton" style="padding: 5px;" @click="chooseOption(service, '2')">
-                        <span class="">Purchase Once</span>
+    <div class="panel-body addBg">
+        <div class="row">
+            <div class="modal" data-backdrop="static" role="dialog" id="primaryEmailPopup">
+                <div class="modal-dialog" v-if="serviceObj">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" style="position: absolute; right: 15px; top: 22px;"
+                                data-dismiss="modal">
+                                &times;
+                            </button>
+                            <h4>{{serviceObj.ServiceName}}</h4>
+                        </div>
+
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <div>
+                                            {{serviceObj.ServiceDescription}}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="modal-footer">
+
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="modal" data-backdrop="static" role="dialog" id="primaryEmailPopup" v-if="serviceObj">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                        <button type="button" class="close" style="position: absolute; right: 15px; top: 22px;"
-                        data-dismiss="modal">
-                        &times;
-                    </button>
-                    <h4>{{serviceObj.ServiceName}}</h4>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <input type="text" placeholder="Search Services..." class="form-control">
                 </div>
+                <div class="form-group">
+                    <div class="cellRow serviceCards" style="width: 100%; overflow: scroll; margin-top: 20px;">
+                        <div class="cellCol" v-for="service in servieList"
+                            style="padding: 5px; border: 1px solid #ddd;flex: 0 0 12%;">
 
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <div>
-                                    {{serviceObj.ServiceDescription}}
-                                </div>
+                            <img :src="service.ServiceImage" class="serviceCardImg" @click="showMoreInfo(service)"
+                                height="150" width="200">
+                            <div class="serviceName">
+                                <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}} - ₹ {{service.Price}}</span>
                             </div>
+                            <div class="form-group purchaseButton" style="padding: 5px;"
+                                @click="chooseOption(service, '1')">
+                                <span class="">Subscribe @ ₹ {{service.SubscriptionPrice}}</span>
+                            </div>
+                            <div class="form-group purchaseButton" style="padding: 5px;"
+                                @click="chooseOption(service, '2')">
+                                <span class="">Purchase Once</span>
+                            </div>
+
                         </div>
                     </div>
+                </div>
 
-                </div>
-                <div class="modal-footer">
-                    
-                </div>
+
             </div>
         </div>
     </div>
